# go-i3s

./: CMakeLists.txt  README.md  archive.go  cartesian_transformation.go  context.go  doc.go  go.mod  material.go  mesh.go  texture.go  types.go  writer.go
src/: CMakeLists.txt  i3s_api.cc  i3s_api.h
testdata/: VirginMultipatch_SLPK.slpk
