
include_directories(${FLYWAVE_INCLUDE_DIRS})

FILE( GLOB ci3s_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc )
FILE( GLOB ci3s_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hh ${CMAKE_CURRENT_SOURCE_DIR}/*.h )

ADD_LIBRARY(ci3s STATIC
            ${ci3s_HEADER_FILES}
            ${ci3s_SOURCE_FILES}
          )

TARGET_INCLUDE_DIRECTORIES(ci3s PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)

SOURCE_GROUP("src" FILES ${ci3s_SOURCE_FILES})
SOURCE_GROUP("include" FILES ${ci3s_HEADER_FILES})

SET_TARGET_PROPERTIES(ci3s
                    PROPERTIES PUBLIC_HEADER "${headers}")
